2008-07-28  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig

        <rdar://problem/6093281> - autocomplete="off" should work when going back

        * security/autocomplete-cleared-on-back-expected.txt: Added.
        * security/autocomplete-cleared-on-back.html: Added.
        * security/resources: Added.
        * security/resources/autocomplete-cleared-on-back2.html: Added.

2008-07-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam.

        <rdar://problem/6098335>
        https://bugs.webkit.org/show_bug.cgi?id=20150
        
        Add tests.
        
        * http/tests/xmlhttprequest/resources/forbidden.txt: Added.
        * http/tests/xmlhttprequest/resources/redirect.php: Added.
        * http/tests/xmlhttprequest/xmlhttprequest-unsafe-redirect-expected.txt: Added.
        * http/tests/xmlhttprequest/xmlhttprequest-unsafe-redirect.html: Added.

2008-07-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=20176
        querySelectorAll id optimization no longer working

        * fast/dom/SelectorAPI/caseID-almost-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-almost-strict.html: Added.
        * fast/dom/SelectorAPI/caseID-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-strict.html: Added.
        * fast/dom/SelectorAPI/caseID.html: Added.

2008-07-27  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dave Hyatt.

        Updated layout CSS2.1 test suite tests related to css parsing:
        https://bugs.webkit.org/show_bug.cgi?id=14346

        * platform/mac/css2.1/t040105-import-01-b-expected.checksum:
        * platform/mac/css2.1/t040105-import-01-b-expected.png:
        * platform/mac/css2.1/t040105-import-01-b-expected.txt:
        * platform/mac/css2.1/t0402-syntax-05-f-expected.checksum: