@@ -1,0 +1,28 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
+<head>
+<style>
+@-webkit-define {
+    one {
+       position:absolute;
+       width:100px;
+       height:100px
+    };
+    two {
+       background-color: green
+    }
+}
+
+.variables {
+    =one=;
+    =two=
+}
+</style>
+</head>
+<body>
+You should see a green square below.  There should be no red on the page.
+
+<div style="position:relative">
+<div style="position:absolute; width:100px;height:100px;background-color:red"></div>
+<div class="variables"></div>
+</div>
